# term-rewriting-applicative

./: .gitignore  README.md  stack-13.20.yaml  term-rewriting-applicative.cabal
src/Data/Rewriting/Applicative/: Problem.hs  Rule.hs  Rules.hs  SimpleTypes.hs  Term.hs
